# Qt624Template

./: CMakeLists.txt  CMakeLists.txt.user.6025375  CMakeLists.txt.user.a09412c  ReadMe.md  audioformat.h  audiosink.h  backward.h  decoders.h  demuxer.h  dispatcher.h  fireworks.h  forward.h  frame.h  framecontroller.h  helper.h  hotplug.h  hurricane.h  main.cpp  main.qml  platform.h  playback.h  renderer.h  twinsqueue.h  updatevalue.h  virtual.h  yt20player.h
shader/: fragment.fsh
